syntax = "proto3";

package anemos.metastore.core;

option java_package = "io.anemos.metastore.core";


message LintFieldNamesGood {
    string ok_snake_case = 1;
    string video_quartile_100_rate = 2;
    string street_address2 = 3;
    string sha512 = 4;
}

message LintFieldNamesBad {
    string nok_Camel = 1;
    string Nok_foo = 2;
    string nok_baR = 3;
}

message lintmessagelowercase {

}

message lint_message_camelcase {

}


